; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_backend.c_hc_clGetProgramBuildInfo.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_backend.c_hc_clGetProgramBuildInfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i64 }
%struct.TYPE_8__ = type { i64 (i32, i32, i32, i64, i8*, i64*)* }

@CL_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [28 x i8] c"clGetProgramBuildInfo(): %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hc_clGetProgramBuildInfo(%struct.TYPE_6__* %0, i32 %1, i32 %2, i32 %3, i64 %4, i8* %5, i64* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_6__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i64*, align 8
  %16 = alloca %struct.TYPE_7__*, align 8
  %17 = alloca %struct.TYPE_8__*, align 8
  %18 = alloca i64, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i64 %4, i64* %13, align 8
  store i8* %5, i8** %14, align 8
  store i64* %6, i64** %15, align 8
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %20, align 8
  store %struct.TYPE_7__* %21, %struct.TYPE_7__** %16, align 8
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %16, align 8
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = inttoptr i64 %24 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %25, %struct.TYPE_8__** %17, align 8
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %17, align 8
  %27 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %26, i32 0, i32 0
  %28 = load i64 (i32, i32, i32, i64, i8*, i64*)*, i64 (i32, i32, i32, i64, i8*, i64*)** %27, align 8
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* %11, align 4
  %31 = load i32, i32* %12, align 4
  %32 = load i64, i64* %13, align 8
  %33 = load i8*, i8** %14, align 8
  %34 = load i64*, i64** %15, align 8
  %35 = call i64 %28(i32 %29, i32 %30, i32 %31, i64 %32, i8* %33, i64* %34)
  store i64 %35, i64* %18, align 8
  %36 = load i64, i64* %18, align 8
  %37 = load i64, i64* @CL_SUCCESS, align 8
  %38 = icmp ne i64 %36, %37
  br i1 %38, label %39, label %44

39:                                               ; preds = %7
  %40 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %41 = load i64, i64* %18, align 8
  %42 = call i32 @val2cstr_cl(i64 %41)
  %43 = call i32 @event_log_error(%struct.TYPE_6__* %40, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %42)
  store i32 -1, i32* %8, align 4
  br label %45

44:                                               ; preds = %7
  store i32 0, i32* %8, align 4
  br label %45

45:                                               ; preds = %44, %39
  %46 = load i32, i32* %8, align 4
  ret i32 %46
}

declare dso_local i32 @event_log_error(%struct.TYPE_6__*, i8*, i32) #1

declare dso_local i32 @val2cstr_cl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
